--- a/exercício_02_calculadora.html
+++ b/exercício_02_calculadora.html
@@ -6,7 +6,31 @@
     <title>Exercício 02 calculadora ultilizando métodos</title>
 </head>
 <body>
+
     <h1>Exercício 02 calculadora ultilizando métodos</h1>
+
+    <h2>Calculaddora</h2>
+
+    <form action="">
+        primeiro número: <input type="text" name="num1" id="num1" required autofocus>
+        <br>
+        <br>
+        Escolha a operação:
+        <br>
+        1 Soma<br>
+        2 Subtração<br>
+        3 Multipicação<br>
+        4 Divisão
+        <br>
+        <input type="number" id="escolha" name="escolha">
+        <br>
+        <input type="button" id="cacular" value="cacular">
+        <br>
+        <br>
+        segundo número: <input type="text" name="num2" id="num2">   
+    </form>
+
+
     <script src="js/Exercicio_02_calculadora.js"></script>
 </body>
 </html>
