--- a/introducao_ao_dom.html
+++ b/introducao_ao_dom.html
@@ -12,7 +12,7 @@
 
     <form action="">
         Entre com o número: <input type="text" id="number" name="number">
-        <input type="button" value="calcular" onclick="calcula()" >
+        <input type="button" value="calcular" onclick="" >
     </form>
     <script src="js/introducao_ao_dom.js"></script>
 </body>
