--- a/exercício_02_calculadora.html
+++ b/exercício_02_calculadora.html
@@ -12,7 +12,10 @@
     <h2>Calculaddora</h2>
 
     <form action="">
-        primeiro número: <input type="text" name="num1" id="num1" required autofocus>
+        Primeiro número: <input type="text" name="num1" id="num1" required autofocus>
+        <br>
+        <br>
+        Segundo número: <input type="text" name="num2" id="num2">
         <br>
         <br>
         Escolha a operação:
@@ -24,13 +27,13 @@
         <br>
         <input type="number" id="escolha" name="escolha">
         <br>
-        <input type="button" id="cacular" value="cacular">
+        <input type="button" id="cacular" value="cacular" onclick="">
         <br>
         <br>
-        segundo número: <input type="text" name="num2" id="num2">   
+        reposta: <input type="text" name="resp" id="resp">
     </form>
 
 
-    <script src="js/Exercicio_02_calculadora.js"></script>
+    <script src="js/calculadoraProf.js"></script>
 </body>
 </html>
